src/tui/render/snapshots/agent_bar__tui__render__dashboard__tests__card_hover_state_renders_without_panic.snap
---
source: src/tui/render/dashboard.rs
expression: terminal.backend()
---
"╭ Claude · Max 5x ────────────────────────────────────────────────────────────────────────────✓ ok╮ "
"│sessão  ██████████████████▌░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   26%  → 23:00   │ "
"│semana  █████████████████████████▌░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   36%  → 00:00   │ "
"│   coletando…                                                                                    │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Hoje (24h) ──────────────────────────────────────────────────────────────────────────────────────╮"
"│ coletando histórico…                                                                             │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                           ↵ abrir     r atualizar     ? ajuda     q sair                           "
