src/tui/render/snapshots/agent_bar__tui__render__dashboard__tests__overview_all_ok.snap
---
source: src/tui/render/dashboard.rs
expression: terminal.backend()
---
"╭ Claude · Max 5x ────────────────────────────────────────────────────────────────────────────✓ ok╮ "
"│sessão  ██████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   26%  → 23:00   │ "
"│semana  ██████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   36%  → 00:00   │ "
"│ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▂▁▁▁▇▁  $2.10 hoje                                                            │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Codex · Max 5x ─────────────────────────────────────────────────────────────────────────────✓ ok╮ "
"│sessão  ███████████████████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   55%  → 01:28   │ "
"│semana  ██████████████████████████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   65%  → 00:00   │ "
"│ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▇▁▁  - hoje                                                                │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Amp · Max 5x ───────────────────────────────────────────────────────────────────────────────✓ ok╮ "
"│sessão  █████████████████████████████████████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒   80%  → -       │ "
"│semana  ████████████████████████████████████████████████████████████████▒▒▒▒▒▒▒   90%  → 00:00   │ "
"│ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▇▁▁▁  cr $4.19 hoje                                                         │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                           ↵ abrir     r atualizar     ? ajuda     q sair                           "
