src/tui/render/snapshots/agent_bar__tui__render__dashboard__tests__overview_codex_logged_out.snap
---
source: src/tui/render/dashboard.rs
expression: terminal.backend()
---
"╭ Claude · Max 5x ────────────────────────────────────────────────────────────────────────────✓ ok╮ "
"│sessão  ██████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   26%  → 23:00   │ "
"│semana  ██████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   36%  → 00:00   │ "
"│   - hoje                                                                                        │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Codex · Max 5x ──────────────────────────────────────────────────────────────────────✗ deslogado╮ "
"│ sem sessão — clique aqui ou g para logar                                                        │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Amp · Max 5x ───────────────────────────────────────────────────────────────────────────────✓ ok╮ "
"│sessão  █████████████████████████████████████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒   80%  → -       │ "
"│semana  ████████████████████████████████████████████████████████████████▒▒▒▒▒▒▒   90%  → 00:00   │ "
"│   - hoje                                                                                        │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                           ↵ abrir     r atualizar     ? ajuda     q sair                           "
