src/tui/render/snapshots/agent_bar__tui__render__dashboard__tests__overview_empty_no_providers_no_fetch.snap
---
source: src/tui/render/dashboard.rs
expression: terminal.backend()
---
" nenhum provider habilitado — veja a tela Waybar                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                           ↵ abrir     r atualizar     ? ajuda     q sair                           "
