src/tui/render/snapshots/agent_bar__tui__render__dashboard__tests__overview_seeded_skeleton_slots.snap
---
source: src/tui/render/dashboard.rs
expression: terminal.backend()
---
"╭ Claude ───────────────────────────────────────────────────────────────────────────● verificando…╮ "
"│   coletando…                                                                                    │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Codex ────────────────────────────────────────────────────────────────────────────● verificando…╮ "
"│   coletando…                                                                                    │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Amp ──────────────────────────────────────────────────────────────────────────────● verificando…╮ "
"│   coletando…                                                                                    │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"│                                                                                                 │ "
"╰─────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"╭ Hoje (24h) ──────────────────────────────────────────────────────────────────────────────────────╮"
"│ coletando histórico…                                                                             │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                           ↵ abrir     r atualizar     ? ajuda     q sair                           "
